--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 MONGODB_URI=mongodb+srv://Veenaee:Vinay%401505@pro.9gpov.mongodb.net/myDatabase?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret
-EMAIL_USER=cabastoreoffical@gmail.com
-EMAIL_PASS=achttpcpvxdxdhyx
+EMAIL_USER=girisaivinayguttula@gmail.com
+EMAIL_PASS=jygc gdhv rjvg pmee
 PORT=5000
